--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
                     <p class="w3-justify" style="font-family: Georgia, 'Times New Roman', Times, serif;">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium ipsum dolorem excepturi
                         aperiam nobis, repudiandae porro tempora beatae asperiores ullam illo autem eveniet labore quod
-                        voluptatibus sapiente inventore debitis? Repudiandae!</p>
+                        voluptatibus sapiente inventore debitis? Repudiandae!</p> <br>
                     <p class="w3-justify" style="font-family: Georgia, 'Times New Roman', Times, serif;">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium ipsum dolorem excepturi
                         aperiam nobis, repudiandae porro tempora beatae asperiores ullam illo autem eveniet labore quod
@@ -223,6 +223,48 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="w3-row" style="padding: 2%;">
+                <div class="w3-col l6 m12 who-box">
+                    <div class="w3-row w3-padding">
+                        <div class="w3-col l2 m1 s2 w3-round-xlarge w3-center w3-text-white w3-padding-32"
+                            style="background-color: darkslategrey;">
+                            <!-- Why Us Icon-->
+                            <i class="fa-solid fa-circle-check w3-xxlarge"></i>
+                        </div>
+                        <div class="w3-col l10 m11 s10 w3-padding">
+                            <!-- Why Us Content -->
+                            <div class="w3-bottombar w3-padding w3-rightbar w3-border-dark-grey w3-round-xlarge w3-card-4">
+                                <h6>Lorem ipsum dolor sit amet.</h6>
+                                <p style="color: chocolate">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="w3-row w3-padding">
+                        <div class="w3-col l2 m1 s2 w3-round-xlarge w3-center w3-text-white w3-padding-32"
+                            style="background-color: darkslategrey;">
+                            <!-- Why Us Icon-->
+                            <i class="fa-solid fa-circle-check w3-xxlarge"></i>
+                        </div>
+                        <div class="w3-col l10 m11 s10 w3-padding">
+                            <!-- Why Us Content -->
+                            <div class="w3-bottombar w3-padding w3-rightbar w3-border-dark-grey w3-round-xlarge w3-card-4">
+                                <h6>Lorem ipsum dolor sit amet.</h6>
+                                <p style="color: chocolate">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="w3-col l6 m12 w3-padding-large">
+                    <p class="w3-justify" style="font-family: Georgia, 'Times New Roman', Times, serif;">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium ipsum dolorem excepturi
+                        voluptatibus sapiente inventore debitis? Repudiandae!</p> <br>
+                    <p class="w3-justify" style="font-family: Georgia, 'Times New Roman', Times, serif;">
+                        Lorem aperiam nobis, repudiandae porro tempora beatae asperiores ullam illo autem eveniet labore quod
+                        voluptatibus sapiente inventore debitis? Repudiandae!</p>
                 </div>
             </div>
         </div>
