--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
             <!-- Sidebar -->
             <div class="w3-sidebar w3-bar-block w3-card w3-white w3-animate-opacity w3-small w3-padding-large"
-                style="display:none; width: 100%; height: 100vh; left: 0; top: 65px;" id="rightMenu">
+                style="display:none; width: 100%; height: 100vh; left: 0; top: 0;" id="rightMenu">
                 <button onclick="closeRightMenu()" class="w3-bar-item w3-white w3-xlarge w3-left-align">
                     <i class="fa-solid fa-circle-xmark fa-shake w3-hover-none w3-hover-text-teal"
                         style="color: darkslategray;"></i></button><br><br>
@@ -225,7 +225,7 @@
                     </div>
                 </div>
             </div>
-            <div class="w3-row" style="padding: 2%;">
+            <div class="w3-row w3-hide-medium w3-hide-small" style="padding: 2%;">
                 <div class="w3-col l6 m12 who-box">
                     <div class="w3-row w3-padding">
                         <div class="w3-col l2 m1 s2 w3-round-xlarge w3-center w3-text-white w3-padding-32"
