--- a/index.html
+++ b/index.html
@@ -64,15 +64,22 @@
                 <i class="fa fa-search w3-margin" style="color: darkslategray;"></i>
             </div>
             <!-- Sidebar -->
-            <div class="w3-sidebar w3-bar-block w3-card w3-white w3-animate-opacity w3-small w3-padding-large"
-                style="display:none; width: 100%; height: 100vh; left: 0; top: 0;" id="rightMenu">
-                <button onclick="closeRightMenu()" class="w3-bar-item w3-white w3-xlarge w3-left-align">
-                    <i class="fa-solid fa-circle-xmark fa-shake w3-hover-none w3-hover-text-teal"
-                        style="color: darkslategray;"></i></button><br><br>
-                <a class="w3-bar-item w3-btn w3-hover-none w3-text-gray" href="#home"><b>Home</b></a>
-                <a class="w3-bar-item w3-btn w3-hover-none w3-text-teal" href="#about"><b>About</b></a>
-                <a class="w3-bar-item w3-btn w3-hover-none w3-text-teal" href="#catelogue"><b>Catelogue</b></a>
-                <a class="w3-bar-item w3-btn w3-hover-none w3-text-teal" href="#contact"><b>Contact</b></a>
+            <div class="w3-sidebar w3-bar-block w3-card w3-white w3-animate-opacity w3-small"
+                style="display:none; width: 100%; height: 100vh; left: 0; top: 0; line-height: 35px;" id="rightMenu">
+                <header class="w3-container w3-text-white" style="background-color: darkslategray;">
+                    <h2 style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+                    <b>RVN</b>
+                </h2>
+                </header>
+                <div class="w3-padding-large">
+                    <button onclick="closeRightMenu()" class="w3-bar-item w3-white w3-xlarge w3-left-align">
+                        <i class="fa-solid fa-circle-xmark fa-shake w3-hover-none w3-hover-text-teal"
+                            style="color: darkslategray;"></i></button><br><br>
+                    <a class="w3-bar-item w3-btn w3-hover-none w3-text-gray" href="#home"><b>Home</b></a>
+                    <a class="w3-bar-item w3-btn w3-hover-none w3-text-teal" href="#about"><b>About</b></a>
+                    <a class="w3-bar-item w3-btn w3-hover-none w3-text-teal" href="#catelogue"><b>Catelogue</b></a>
+                    <a class="w3-bar-item w3-btn w3-hover-none w3-text-teal" href="#contact"><b>Contact</b></a>
+                </div>
             </div>
             <!-- Script to open & close sidebar -->
             <script>
