--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
             </div>
             <!-- Sidebar -->
             <div class="w3-sidebar w3-bar-block w3-card w3-white w3-animate-opacity w3-small"
-                style="display:none; width: 100%; height: 100vh; left: 0; top: 0; line-height: 35px;" id="rightMenu">
+                style="display:none; width: 100%; height: 100vh; left: 0; top: 0;" id="rightMenu">
                 <header class="w3-container w3-text-white" style="background-color: darkslategray;">
                     <h2 style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
                     <b>RVN</b>
                 </h2>
                 </header>
-                <div class="w3-padding-large">
+                <div class="w3-padding-large w3-xlarge" style="line-height: 40px;">
                     <button onclick="closeRightMenu()" class="w3-bar-item w3-white w3-xlarge w3-left-align">
                         <i class="fa-solid fa-circle-xmark fa-shake w3-hover-none w3-hover-text-teal"
                             style="color: darkslategray;"></i></button><br><br>
