--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
                     <button onclick="closeRightMenu()" class="w3-bar-item w3-white w3-xxlarge w3-right-align">
                         <i class="fa-solid fa-circle-xmark fa-shake w3-hover-none w3-hover-text-teal"
                             style="color: darkslategray;"></i></button><br><br>
-                    <a class="w3-bar-item w3-btn w3-hover-none w3-text-gray" href="#home"><b>Home</b></a>
-                    <a class="w3-bar-item w3-btn w3-hover-none w3-text-teal" href="#about"><b>About</b></a>
-                    <a class="w3-bar-item w3-btn w3-hover-none w3-text-teal" href="#catelogue"><b>Catelogue</b></a>
-                    <a class="w3-bar-item w3-btn w3-hover-none w3-text-teal" href="#contact"><b>Contact</b></a>
+                    <a class="w3-bar-item w3-btn w3-hover-none w3-text-gray w3-right-align" href="#home"><b>Home</b></a>
+                    <a class="w3-bar-item w3-btn w3-hover-none w3-text-teal w3-right-align" href="#about"><b>About</b></a>
+                    <a class="w3-bar-item w3-btn w3-hover-none w3-text-teal w3-right-align" href="#catelogue"><b>Catelogue</b></a>
+                    <a class="w3-bar-item w3-btn w3-hover-none w3-text-teal w3-right-align" href="#contact"><b>Contact</b></a>
                 </div>
             </div>
             <!-- Script to open & close sidebar -->
