--- a/index.html
+++ b/index.html
@@ -66,15 +66,20 @@
             <!-- Sidebar -->
             <div class="w3-sidebar w3-card w3-white w3-animate-opacity w3-small"
                 style="display:none; width: 100%; height: 100vh; left: 0; top: 0;" id="rightMenu">
-                <header class="w3-container w3-text-white w3-wide" style="background-color: darkslategray;">
-                    <h2 style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
-                    <b>RVN</b>
+                <header class="w3-container w3-row" style="background-color: darkslategray;">
+                    <div class="w3-col w3-text-white w3-wide m6 s6">
+                        <h2 style="font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">
+                            <b>RVN</b></h2>
+                    </div>
+                    <!--<div class="w3-col m6 s6">
+                        
+                    </div>-->
                 </h2>
                 </header>
                 <div class="w3-bar-block w3-padding-large w3-large" style="line-height: 40px;">
                     <button onclick="closeRightMenu()" class="w3-bar-item w3-white w3-xxlarge w3-right-align">
                         <i class="fa-solid fa-circle-xmark fa-shake w3-hover-none w3-hover-text-teal"
-                            style="color: darkslategray;"></i></button><br><br>
+                            style="color: darkslategray;"></i></button><br>
                     <a class="w3-bar-item w3-btn w3-hover-none w3-text-gray w3-right-align" href="#home"><b>Home</b></a>
                     <a class="w3-bar-item w3-btn w3-hover-none w3-text-teal w3-right-align" href="#about"><b>About</b></a>
                     <a class="w3-bar-item w3-btn w3-hover-none w3-text-teal w3-right-align" href="#catelogue"><b>Catelogue</b></a>
